rust_writer_proc/tests/ui/parse_attr_fails_if_attr_key_local_not_path_value.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_proc::mutator;

#[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, local = "hello")]
struct SomeStruct;

fn main() {}
